--- a/app/views/static_pages/presentation.html.erb
+++ b/app/views/static_pages/presentation.html.erb
@@ -3,11 +3,11 @@
   
   <div class="container">
 	<div class="row" id="presentation1">
-		<%= image_tag("presentation-centrale12-01.png")%>
+		<%= image_tag("presentation-centrale16-01.png")%>
 	</div>
 	
 	<div class="row" id="presentation1">
-		<%= link_to(image_tag("presentation-centrale13-01.png"), help_path)%>
+		<%= link_to(image_tag("presentation-centrale17-01.png"), presentation_path)%>
 	</div>
 	
   </div>
