--- a/app/assets/stylesheets/users.css.scss
+++ b/app/assets/stylesheets/users.css.scss
@@ -61,9 +61,44 @@
 
 	margin-top: 15px;
 	margin-bottom: 15px;
-	#intro-notifications{
-		margin-left: -20px;
+	
+	.action-notification3{
+	width: 22px;
+	background-color: #808080;
+	font-family: "bebasneue-webfont";
+	text-align: center;
+	font-size:22px;
+	color: black;
+	padding: 6px;
+	margin-left: 320px;
+	}
+	.blanc{
+	background-color: white;
+	width: 10px;
+	height: 25px;
+	margin-left: 410px;
+	margin-top:-15px;
+	}
+	.action-notification4{
+	width: 27px;
+	background-color: #808080;
+	font-family: "bebasneue-webfont";
+	text-align: center;
+	font-size:22px;
+	color: black;
+	padding: 6px;
+	margin-left: 360px;
+	margin-top: -30px;
+	}
+	
+	.notification-link1:hover{
+			color: white;
+		}
 		
+	#intro-notifications{
+	margin-left: -20px;
+	
+
 		.texte{
 			height:30px;
 			padding-left: 10px;
@@ -85,7 +120,7 @@
 			font-size:22px;
 			color: black;
 			}
-			
+		
 		.notification-link:hover{
 				color: white;
 			}
