--- a/app/views/static_pages/help.html.erb
+++ b/app/views/static_pages/help.html.erb
@@ -1,32 +1,15 @@
-<section id="erreurs">
+<section id="presentation-1">
   <%= render :partial => "shared/flash_messages" %>
   
   <div class="container">
-	<div class="row">
-		<div class="row" id="intro">
-			Toutes nos excuses.
-		</div>
+	<div class="row" id="presentation1">
+		<%= image_tag("presentation-centrale14-01.png")%>
 	</div>
-    <div class="row">
-      <div class="span4" id ="petit-abo">
-		<div class="cadre13">
-			<div class="titre">
-			Erreur 404
-			</div>
-			<div class="sous-titre">
-			<%= (["Ce n'est pas là. Enfin, ça y'est plus. Bref.","Sarah conner? C'est à coté","Eh Oui. Vous êtes une brebis égarée."]).shuffle.first%>
-			</div>
-		</div>
-	  </div>
-    </div>
-
-
-	<div class="row" id="intro2">
-		<%= link_to "Cliquez ici pour revenir dans le droit chemin.", root_path %>
+	
+	<div class="row" id="presentation1">
+		<%= link_to(image_tag("presentation-centrale15-01.png"), presentation_path)%>
 	</div>
-	<div class="row" id="photo-abonnement">
-	<%= link_to (image_tag('moutons-abonnement.png', :alt => 'Moutoners')), root_path %>
-	</div>
+	
   </div>
 
 </section>
